mi primer confirmación de actualización

--- a/about.html
+++ b/about.html
@@ -29,6 +29,9 @@
             <img src="Ilustración de la empresa 2.jpeg" alt="descripcion de la imagen">
             <img src="Ilustración de la empresa 3.jpeg" alt="Descripción de la imagen">
           </div>
+          <div class="container greeting"> 
+            <h1>¡Gracias por su visita!</h1>
+          </div>
     </main>
     <footer>
         <p>Pongamos información sobre el desarrollador o la compañia</p>
