--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <main>
             <div class="container"> 
                 <h1>¡Bienvenidos a mi primer website!</h1>
+                <p>Contenido principal de la página.</p>
                 <section>
                 <h2>Presentación</h2>
                 <p>Soy Victoria, ¡y esta es mi primera pagina web!
@@ -42,6 +43,10 @@
                   <video width="360" height="315" src="Humbe - EL POETA (LetraLyrics).mp4"></video>
 
                   </div>
+                  <video controls>
+                   <source src="Humbe - EL POETA (LetraLyrics).mp4" type="video/mp4">
+                   Tu navegador no admite el elemento de video. 
+                  </video>
         </main>
         <footer>
             <p>Pongamos información sobre el desarrollador o la compañia</p>
